# easydeploy-ai-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: publish-pypi.yml
docs/: README.md  aws-p0.md  claude-getting-started.md  claude-remote-connector.md  claude.md  e2e-mcp-pre-claude-validation-plan.md  mcp-host-preflight.md  sandbox-mcp-validation.md
scripts/: cognito_mcp_get_access_token.py  mcp-streamable-client.mjs  push_mcp_image_ecr.sh  run_mcp_docker_local.sh  smoke-mcp-http.mjs  smoke-mcp-train-predict.mjs  smoke_mcp_remote.sh  validate_mcp_sandbox.sh  validate_sandbox_api_key.sh  verify_mcp_host_preflight.sh
src/easydeploy_ai_mcp/: __init__.py  __main__.py  api_client.py  auth.py  cli.py  credentials.py  defaults.py  http_main.py  oauth_as_metadata.py  server.py
tests/: test_auth.py  test_cognito_jwt_integration.py  test_credentials.py  test_http_main.py  test_oauth_as_metadata.py  test_server_tools.py
